<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".receiver.ReceiverActivity">

    <TextView
        android:id="@+id/title_label_of_sender_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/sender_list_title" />

    <Button
        android:id="@+id/sender_list_refresh_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sender_list_refresh_button_text" />

    <ListView
        android:id="@+id/senders_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <EditText
        android:id="@+id/connection_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/connection_code_input_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm_code_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connection_code_confirm_button_text" />

    <TextView
        android:id="@+id/title_label_of_downloading_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/downloading_list_title" />

    <ListView
        android:id="@+id/downloading_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>